--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
+@font-face {
+  font-family: Futura-Bold;
+  src: url(./fonts/Futura\ Bold.otf)
+}
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: Source Sans Pro;
 }
 
 code {
