--- a/src/dashboard/fifth/fifthBoard.scss
+++ b/src/dashboard/fifth/fifthBoard.scss
@@ -48,13 +48,32 @@ $darkgrey: #595959;
     }
 
     .journey {
-        border: solid;
         .bold {
             font-weight: bold;
         }
 
         img {
             width: 100%;
+            padding-bottom: 5%;
         }
+
+    }
+
+    .arch {
+        h4 {
+            width: 90%;
+        }
+
+        p {
+            width: 90%;
+        }
+
+        .img {
+            margin-right: 2%;
+        }
+    }
+
+    .wf {
+        width: 100%;
     }
 }
