--- a/src/dashboard/userFlow/userFlow.scss
+++ b/src/dashboard/userFlow/userFlow.scss
@@ -1,1 +1,26 @@
-imp
+
+.uf {
+    // width: 43%;
+    // margin: 0 auto;
+
+    .w {
+        img {
+            padding-top: 5%;
+            padding-bottom: 5%;
+            width: 100%;
+        }
+    }
+
+    .diff {
+        width: 43%;
+        margin: 0 auto;
+
+        h4 {
+            margin-bottom: 5%;
+        }
+
+        P {
+            margin-bottom: 5%;;
+        }
+    }
+}
