need to work on the 7 pictures alignment

--- a/src/dashboard/userFlow/userFlow.scss
+++ b/src/dashboard/userFlow/userFlow.scss
@@ -1,26 +1,19 @@
 
 .uf {
-    // width: 43%;
-    // margin: 0 auto;
+    // display: none;
+    .w {        
+        
 
-    .w {
         img {
             padding-top: 5%;
             padding-bottom: 5%;
             width: 100%;
         }
+
+       
     }
 
-    .diff {
-        width: 43%;
-        margin: 0 auto;
-
-        h4 {
-            margin-bottom: 5%;
-        }
-
-        P {
-            margin-bottom: 5%;;
-        }
-    }
+    
 }
+
+
